shlr/rizin-shell-parser/corpus/quoted_args.txt
==============================
Echo with (double) quoted args
==============================

?e "This;is.one@string"

---

(statements
  (arged_stmt command: (cmd_identifier)
    args: (args (arg (double_quoted_arg)))))

==============================
Echo with (single) quoted args
==============================

?e 'This;is.one@string'

---

(statements
  (arged_stmt command: (cmd_identifier)
    args: (args (arg (single_quoted_arg)))))


===========================
Legacy command - all quoted
===========================

"?e This;is.one@string"

---

(statements
  (legacy_quoted_stmt))


=======================================
Double quoted arg with cmd substitution
=======================================

?e "This is $(?e "a command")"

---

(statements
  (arged_stmt command: (cmd_identifier)
    args: (args
             (arg (double_quoted_arg
	       (cmd_substitution_arg
	         (arged_stmt command: (cmd_identifier)
		   args: (args
		            (arg (double_quoted_arg))))))))))

==================
Quoted hash
==================

?e "#"
?e " #$(pdf)"
?e '#'

---

(statements
  (arged_stmt command: (cmd_identifier)
    args: (args (arg (double_quoted_arg))))
  (arged_stmt command: (cmd_identifier)
    args: (args
            (arg (double_quoted_arg
	           (cmd_substitution_arg
		     (arged_stmt command: (cmd_identifier)))))))
  (arged_stmt command: (cmd_identifier)
    args: (args (arg (single_quoted_arg)))))
