shlr/rizin-shell-parser/corpus/search_commands.txt
=============
Simple search
=============

/ "foo\x00"

---

(statements
  (arged_stmt (cmd_identifier)
    (args (arg (double_quoted_arg)))))


==============
Not matching
==============

/! ff
/!x 00

---

(statements
  (arged_stmt (cmd_identifier)
    (args (arg (arg_identifier))))
  (arged_stmt (cmd_identifier)
    (args (arg (arg_identifier)))))


=======
Reg exp
=======

/e /E.F/i

---

(statements
  (arged_stmt (cmd_identifier)
    (args (arg (arg_identifier)))))


===================
Search with nibbles
===================

/x ff..33

---

(statements
  (arged_stmt (cmd_identifier)
    (args (arg (arg_identifier)))))
